[metadata]
name = guessinggame
version = 0.0.1
author = Ahat Orazgeldiyev
author_email = ahato@ksu.edu
description = A fun guessing game
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
url = https://github.com/ksu-cc-410-fall2021/example-10-releases-python-AhatOz
project_urls = 
    Bug Tracker = https://github.com/ksu-cc-410-fall2021/example-10-releases-python-AhatOz/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
packages = find:
python_requires = >= 3.9
include-package-data = true

[options.package_data]
guessinggame = py.typed